resolved phone num spacing issue due to previous commit

--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,7 @@ html, body {
   margin-bottom: 1em;
 }
 
-.phones {
+.first-phone-num {
   margin-top: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 0em;
 }
